# vb4onboarding

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  conanfile.txt
.cursor/: cli.json
.github/workflows/: ai-build-run.yml
src/: guideline_violation.cpp  main.cpp
